--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,13 +1,14 @@
 .home {
     height: 100vh;
     width: 100vw;
+
     display: grid;
-    grid-template-columns: [library-s] 1fr 1fr [library e schedule-s] 1fr [schedule-e];
-    grid-template-rows: 1fr;
+    grid-template-columns: [library-s] 1fr 1fr [library-e schedule-s] 1fr [schedule-e];
+    grid-template-rows: 1fr;
 }
 
 .library {
-    grid-column: library-s/library-e
+    grid-column: library-s/library-e;
 }
 
 .schedule {
