--- a/src/style/arrow.scss
+++ b/src/style/arrow.scss
@@ -1,8 +1,14 @@
 .arrow {
     border-left: 8px solid transparent;
     border-right: 8px solid transparent;
-    border-bottom: 10px solid blue;
+    border-top: 8px solid $color-blue;
 
     height: 0;
     width: 0;
-}
+
+    transition: all .3s ease;
+  }
+
+  .arrow-closed {
+    transform: rotate(180deg);
+  }
